; ModuleID = '/home/carl/AnghaBench/libgit2/tests/extr_clar_libgit2.c_cl_git_sandbox_reopen.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/extr_clar_libgit2.c_cl_git_sandbox_reopen.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@_cl_repo = common dso_local global i32* null, align 8
@_cl_sandbox = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @cl_git_sandbox_reopen() #0 {
  %1 = load i32*, i32** @_cl_repo, align 8
  %2 = icmp ne i32* %1, null
  br i1 %2, label %3, label %10

3:                                                ; preds = %0
  %4 = load i32*, i32** @_cl_repo, align 8
  %5 = call i32 @git_repository_free(i32* %4)
  store i32* null, i32** @_cl_repo, align 8
  %6 = load i32, i32* @_cl_sandbox, align 4
  %7 = call i32 @cl_fixture_basename(i32 %6)
  %8 = call i32 @git_repository_open(i32** @_cl_repo, i32 %7)
  %9 = call i32 @cl_git_pass(i32 %8)
  br label %10

10:                                               ; preds = %3, %0
  %11 = load i32*, i32** @_cl_repo, align 8
  ret i32* %11
}

declare dso_local i32 @git_repository_free(i32*) #1

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_repository_open(i32**, i32) #1

declare dso_local i32 @cl_fixture_basename(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
